# uptimer

./: .coverage  .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  PLAN.md  README.md  compose.ghcr.yml  compose.yml  config.example.yaml  coverage.xml  docker-compose.yml  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docker.yml  docs.yml
clients/web/: Dockerfile  next.config.js  package-lock.json  package.json
clients/web/src/app/: globals.css  layout.tsx  page.tsx
clients/web/src/components/: add-monitor-dialog.tsx  dashboard.tsx  login-form.tsx  monitor-card.tsx  monitor-logs.tsx  pipeline-builder.tsx
clients/web/src/components/ui/: dialog.tsx
clients/web/src/lib/: api.ts
clients/web/src/types/: api.ts
clients/webhook-receiver/: webhook_receiver.py  webhook_receiver_fastapi.py
docs/: api-reference.md  cli-reference.md  getting-started.md  index.md  introduction.md  rest-api.md
docs/checkers/: custom.md  http.md  index.md
docs/stages/: custom.md  http.md  index.md
docs/web/: configuration.md  index.md
postman/: uptimer.postman_collection.json
scripts/: seed_data.py
src/uptimer/: __init__.py  alerting.py  cli.py  client.py  logging.py  main.py  pipeline.py  scheduler.py  schemas.py  settings.py  storage.py  validation.py
src/uptimer/checkers/: __init__.py  age.py  base.py  contains.py  dhis2.py  dhis2_checks.py  dns.py  header.py  http.py  jq.py  json_schema.py  jsonpath.py  regex.py  registry.py  ssl.py  tcp.py  threshold.py
src/uptimer/stages/: __init__.py  age.py  base.py  contains.py  dhis2.py  dhis2_checks.py  dns.py  header.py  http.py  jq.py  json_schema.py  jsonpath.py  regex.py  registry.py  ssl.py  tcp.py  threshold.py
src/uptimer/web/: __init__.py  app.py  routes.py
src/uptimer/web/api/: __init__.py  deps.py  monitors.py  stages.py  webhooks.py
src/uptimer/web/templates/: base.html  dashboard.html  login.html
tests/: test_alerting.py  test_api_monitors.py  test_api_stages.py  test_api_webhooks.py  test_checkers.py  test_cli.py  test_main.py  test_pipeline.py  test_schemas.py  test_stages.py  test_storage.py
